--- a/style.css
+++ b/style.css
@@ -7,6 +7,16 @@ h1{
     text-align: center;
 }
 
+button{
+    background-color:black;
+    color: whitesmoke;
+    padding: 10px 20px;
+    margin: 15px;
+    box-shadow: 1px 3px 5px rgba(0,0,0,.5);
+    border-radius: 15px;
+}
+
+
 .container{
     display: flex;
     flex-wrap: wrap;
